TestCases/Errors/threaded_movement/observations/spr_10_obs.spm
 obs   4-11   0.00846153846153846 
 obs   5-11   0.010849358974359 
 obs   4-12   0.00846153846153846 
 obs   5-12   0.00676923076923077 
 obs   5-13   0.00461538461538462 
 obs   6-14   0.0123076923076923 
 obs   6-15   0.0123076923076923 
 obs   6-16   0.0607692307692308 
 obs   6-17   0.04444669365722 
 obs   6-18   0.0110526315789474 
 error_value   4-11   0 
 error_value   5-11   0 
 error_value   4-12   0 
 error_value   5-12   0 
 error_value   5-13   0 
 error_value   6-14   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   6-17   0 
 error_value   6-18   0 
